style/_contact.scss
*{
    box-sizing: border-box;
}

.contact__container {
    width:100%;
    // max-width: 1110px;
    margin: 0 auto;
    padding-top: 4%;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

// .contact__content-left{
//     margin-right: 20%;
// }
.contact__title {
    margin-top: 13%;
    max-width:350px;
    height: 174px;
    font-size: 40;
    line-height: 45px;
    font-weight: 700;
    margin-left: 10%;   
}

.contact__info{
    font-size: 15px;
    width: 390px;
    margin-left: 10%;
    margin-bottom: 17%;
}   

.contact__content-right{
       max-width: 475px;
       min-height: 291px;
}
.contact__form{
    width: 100%;
    padding-left: 20px;
    padding-top: 25px;
    // max-width:350px;
}

.input-field {
    padding: 46px 0 16px 0;
    width: 80%;
    border: none;
    border-bottom: 1px solid #D8D8D8;
    display: inline-block;
}

.placeholder{
    font-size: 14px;
}

.contact__button{
     margin-top: 38px;
    // margin-bottom: 120px;
    padding: 15px;
    text-align: center;
    color: #fff;
    background-color: darkblue;
    border: none;
    width: 125px;
    cursor: pointer;
}

.contact_map{
    max-width: 1110px;
    min-width: 470px;
    margin: 0 auto;
    margin-top: 12%;
}

